completed all challenges

--- a/Poll/Poll/Storyboards/Results.storyboard
+++ b/Poll/Poll/Storyboards/Results.storyboard
@@ -12,7 +12,7 @@
         <!--Results-->
         <scene sceneID="OVN-qZ-aUc">
             <objects>
-                <tableViewController id="i7U-OK-qea" customClass="ResultsTableViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="i7U-OK-qea" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vA2-NG-GQO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
